# signal-handler

./: CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  sighandle.cpp
src/: CMakeLists.txt
src/sig/: handler.cpp  handler.hpp
src/signals/: handler.cpp  handler.hpp
tests/: CMakeLists.txt  basic.cpp  runner.cpp
